--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
                 </div>
                 <div class="hero-image">
                     <div class="profile-img">
-                        <img src="https://lens.usercontent.google.com/image?vsrid=CNybvZahq9TxExACGAEiJDJiZGYxNjBiLThlMTktNGM4YS05MzhlLTdmY2U0YTQ0NmU1Zg&gsessionid=R2CQpaiZi0qnexkcJlDseVyT2yjBfRPylJ14LoPneF8RdagPRYlJ0w" alt="Akshay Yelakanti">
+                        <img src="pic2.jpeg" alt="Akshay Yelakanti">
                     </div>
                 </div>
             </div>
